# determa-state-python

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
conformance/: conftest.py  harness.py  test_conformance.py
scripts/: sync_schema.py
src/determa/state/: __about__.py  __init__.py  __main__.py  cel.py  cli.py  contracts.py  definition.py  errors.py  export.py  instance.py  observer.py  store.py  validator.py  values.py  yaml12.py
src/harel/: __about__.py  __init__.py  __main__.py  cel.py  cli.py  definition.py  engine.py  errors.py  instance.py  model.py  observer.py  store.py  validator.py  values.py  yaml12.py
tests/: conftest.py  harness.py  test_choice.py  test_cli_stream.py  test_conformance.py  test_export.py  test_library_api.py  test_logging.py  test_model.py  test_native_values.py  test_observer.py  test_static_validation.py  test_stepping.py  test_stores.py  test_submachine.py  test_validator.py  test_yaml12.py
