[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harel"
version = "0.1.0"
description = "Python reference implementation of the harel statechart engine"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Christian-Manuel Butzke" }]
dependencies = [
  "pyyaml>=6",
  "jsonschema>=4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "cel-python",
  "ruff",
  "mypy",
  "types-PyYAML",
  "types-jsonschema",
]

[tool.hatch.build.targets.wheel]
packages = ["src/harel"]

[tool.hatch.build.targets.wheel.force-include]
"src/harel/data/machine.schema.json" = "harel/data/machine.schema.json"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
files = ["src/harel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
