[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harel-python"
version = "0.0.2"
description = "Python reference implementation of the harel statechart engine"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Christian-Manuel Butzke" }]
keywords = ["statechart", "state-machine", "harel", "fsm", "hsm", "uml", "scxml"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = [
  "pyyaml>=6",
  "jsonschema>=4",
  "cel-python>=0.1",
]

[project.urls]
Homepage = "https://github.com/fruwehq/harel-python"
Repository = "https://github.com/fruwehq/harel-python"
Specification = "https://github.com/fruwehq/harel"
Issues = "https://github.com/fruwehq/harel-python/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff",
  "mypy",
  "types-PyYAML",
  "types-jsonschema",
]

[project.scripts]
harel = "harel.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/harel"]

[tool.hatch.build.targets.wheel.force-include]
"src/harel/data/machine.schema.json" = "harel/data/machine.schema.json"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["vendor"]  # the harel spec repo is a vendored submodule, not ours to lint

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
files = ["src/harel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
