[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "determa-state"
dynamic = ["version"]
description = "Determa State — Python reference implementation of the Determa statechart engine"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Christian-Manuel Butzke" }]
keywords = ["statechart", "state-machine", "determa", "fsm", "hsm", "uml", "scxml"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = [
  "pyyaml>=6",
  "jsonschema>=4",
  "cel-python>=0.1",
]

[project.urls]
Homepage = "https://github.com/fruwehq/determa-state-python"
Repository = "https://github.com/fruwehq/determa-state-python"
Specification = "https://github.com/fruwehq/determa-state-spec"
Issues = "https://github.com/fruwehq/determa-state-python/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff",
  "mypy",
  "types-PyYAML",
  "types-jsonschema",
]

[project.scripts]
# The canonical command, plus a language-suffixed alias so the launcher (and users)
# can pick a specific implementation when both are installed (DETERMA_STATE_IMPL=python).
determa-state = "determa.state.cli:main"
determa-state-python = "determa.state.cli:main"

[tool.hatch.version]
path = "src/determa/state/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/determa"]

[tool.hatch.build.targets.wheel.force-include]
"src/determa/state/data/machine.schema.json" = "determa/state/data/machine.schema.json"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["vendor"]  # the Determa State spec repo is a vendored submodule, not ours to lint

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
files = ["src/determa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
